--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -13,36 +13,45 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12 text-center">
-          <br/><br/>
-          <img src="/img/logo.png" alt="logo rust"/>
-          <h1>Rust PE</h1>
+          <header>
+            <img src="/img/logo.png" alt="logo rust"/>
+            <h1>Rust PE</h1>
+          </header>
           <p>Grupo de usuarios de Rust. <strong class="blue">Apoyado por Mozilla Perú</strong></p>
-          <a href="http://github.com/mozillaperu" target="_blank">
-            <i class="fa fa-github" aria-hidden="true"></i>
-          </a>
-          &nbsp;&nbsp;&nbsp;
-          <a href="https://discourse.mozilla-community.org/c/peru" target="_blank">
-            <i class="fa fa-comments" aria-hidden="true"></i>
-          </a>
-          &nbsp;&nbsp;&nbsp;
-          <a href="https://www.meetup.com/es-ES/mozillaperu/" target="_blank">
-            <i class="fa fa-meetup" aria-hidden="true"></i>
-          </a>
-          &nbsp;&nbsp;&nbsp;
-          <a href="https://twitter.com/mozillaperu" target="_blank">
-            <i class="fa fa-twitter" aria-hidden="true"></i>
-          </a>
-          &nbsp;&nbsp;&nbsp;
-          <a href="http://facebook.com/mozillape" target="_blank">
-            <i class="fa fa-facebook-official" aria-hidden="true"></i>
-          </a>
+          <ul class="list-inline">
+            <li>
+              <a href="http://github.com/mozillaperu" target="_blank">
+                <i class="fa fa-github" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://discourse.mozilla-community.org/c/peru" target="_blank">
+                <i class="fa fa-comments" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.meetup.com/es-ES/mozillaperu/" target="_blank">
+                <i class="fa fa-meetup" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/mozillaperu" target="_blank">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li>
+              <a href="http://facebook.com/mozillape" target="_blank">
+                <i class="fa fa-facebook-official" aria-hidden="true"></i>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
-      <div id="footer" class="row">
+      <footer id="footer" class="row">
         <div class="col-md-12 text-center">
           <p>Desarrollado con <a href="https://rocket.rs/" target="_blank">Rocket.rs</a></p>
-        </di>
-      </div>
+        </div>
+      </footer>
     </div>
 
     <script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
