Agregar link a telegram

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -30,6 +30,11 @@
               </a>
             </li>
             <li>
+              <a href="https://t.me/activatemozpe" target="_blank">
+                <i class="fa fa-telegram" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li>
               <a href="https://www.meetup.com/es-ES/mozillaperu/" target="_blank">
                 <i class="fa fa-meetup" aria-hidden="true"></i>
               </a>
