--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -52,6 +52,20 @@
           </ul>
         </div>
       </div>
+      <div class="row">
+        <br/><br/>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+        </div>
+        <div id="event_block" class="col-md-4">
+          <h3>Próximo Evento</h3>
+          <div id="events" class="text-center">
+          </div>
+        </div>
+        <div class="col-md-4">
+        </div>
+      </div>
       <footer id="footer" class="row">
         <div class="col-md-12 text-center">
           <p>Desarrollado con <a href="https://rocket.rs/" target="_blank">Rocket.rs</a></p>
@@ -61,5 +75,7 @@
 
     <script type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/moment.min.js"></script>
+    <script type="text/javascript" src="/js/app.js"></script>
   </body>
 </html>
