--- a/static/css/app.css
+++ b/static/css/app.css
@@ -35,6 +35,12 @@ a, a:hover {
   text-decoration: none;
 }
 
+a.white, a.white:hover {
+  font-size: 18px;
+  color: white;
+  text-decoration: none;
+}
+
 p {
   font-size: 18px;
   padding: 20px 0 20px 0;
