se agrega tabzilla

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -6,10 +6,14 @@
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />    
+    <link rel="stylesheet" href="/css/tabzilla.css" />
     <link rel="stylesheet" href="/css/app.css" />
   </head>
   <body>
+    <div id="tabzilla">
+      <a href="https://www.mozilla.org/">Mozilla</a>
+    </div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12 text-center">
@@ -59,7 +63,7 @@
         <div class="col-md-4">
         </div>
         <div id="event_block" class="col-md-4">
-          <h3>Próximo Evento</h3>
+          <h3>Último Evento</h3>
           <div id="events" class="text-center">
           </div>
         </div>
