--- a/static/css/app.css
+++ b/static/css/app.css
@@ -31,7 +31,7 @@ header {
 
 a, a:hover {
   font-size: 24px;
-  color: #231F1F;
+  color: #0C99D5;
   text-decoration: none;
 }
 
@@ -56,7 +56,7 @@ h1 {
 }
 
 .blue {
-  color: #428BCA;
+  color: #0C99D5;
 }
 
 #event_block {
