remove connection to database

--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="/css/tabzilla.css" />
     <link rel="stylesheet" href="/css/app.css" />
   </head>
@@ -65,6 +65,13 @@
         <div id="event_block" class="col-md-4">
           <h3>Último Evento</h3>
           <div id="events" class="text-center">
+            <h3>SEMANA INFORMÁTICA - UNMSM</h3>
+            <h4>27/04/2017 03:00 PM</h4>
+            <p>Introducción a Rust: Un lenguaje de programación que combina
+              paradigmas de programación de alto y bajo nivel.</p>
+            <p><a class="white"
+              href="https://docs.google.com/presentation/d/1OvRppwOzelg-3Am3lq6LttuwgxSDxDA62dOfMUhHask/edit?usp=sharing"
+              target="_blank">Presentación</a></p>
           </div>
         </div>
         <div class="col-md-4">
